[gd_scene load_steps=44 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/BarCounter.png" type="Texture" id=2]
[ext_resource path="res://Scenes/BarTap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/mainmusic.ogg" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Clock.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sounds/mainmusicpart2.ogg" type="AudioStream" id=6]
[ext_resource path="res://Scripts/World.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Sillhouette.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Crab.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Sillhouette3.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Sillhouette2.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Sillhouette4.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sprites/YardNormal.png" type="Texture" id=14]
[ext_resource path="res://Sprites/WindowNormal.png" type="Texture" id=15]
[ext_resource path="res://Sprites/YardNormalForeground.png" type="Texture" id=16]
[ext_resource path="res://Scenes/SeatSpawner.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Cups.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scripts/Crudlite.gd" type="Script" id=19]
[ext_resource path="res://Scripts/Snootbeer.gd" type="Script" id=20]
[ext_resource path="res://Scripts/DrBob.gd" type="Script" id=21]
[ext_resource path="res://Scripts/Bloodweiser.gd" type="Script" id=22]
[ext_resource path="res://Sprites/Mugs.png" type="Texture" id=23]
[ext_resource path="res://Sprites/BarTap4.png" type="Texture" id=24]
[ext_resource path="res://Scenes/StrikeList.tscn" type="PackedScene" id=25]
[ext_resource path="res://Sprites/Bowls.png" type="Texture" id=26]
[ext_resource path="res://Sprites/WineGlasses.png" type="Texture" id=27]
[ext_resource path="res://Scripts/Rglass.gd" type="Script" id=28]
[ext_resource path="res://Scripts/Soup.gd" type="Script" id=29]
[ext_resource path="res://Scripts/Wglass.gd" type="Script" id=30]
[ext_resource path="res://Sprites/DrinkSheet.png" type="Texture" id=31]
[ext_resource path="res://Scripts/BottomSelection.gd" type="Script" id=32]
[ext_resource path="res://Sprites/BarTap2.png" type="Texture" id=33]
[ext_resource path="res://Sprites/BarTap3.png" type="Texture" id=34]
[ext_resource path="res://Sprites/SideCounter.png" type="Texture" id=35]
[ext_resource path="res://Sprites/CounterShelf.png" type="Texture" id=36]
[ext_resource path="res://Scenes/Pulses.tscn" type="PackedScene" id=37]
[ext_resource path="res://Sprites/BigDrinksSheet.png" type="Texture" id=38]
[ext_resource path="res://Scenes/TV.tscn" type="PackedScene" id=39]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.0591, 24.7909 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.57143, 12.6785 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17.6516, 20.5753 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 12 )

[node name="World" type="Node"]
script = ExtResource( 7 )

[node name="WindowNormal" type="Sprite" parent="."]
position = Vector2( 394, 154 )
scale = Vector2( 1.35789, 1.37952 )
texture = ExtResource( 15 )
hframes = 2

[node name="YardNormal" type="Sprite" parent="."]
position = Vector2( 655.463, 175.982 )
scale = Vector2( 1.35436, 1.35436 )
texture = ExtResource( 14 )
hframes = 2

[node name="Sillhouette" parent="." instance=ExtResource( 8 )]
position = Vector2( 124, 208 )
scale = Vector2( 0.75, 0.75 )

[node name="Sillhouette2" parent="." instance=ExtResource( 12 )]
position = Vector2( 836, 225 )
rotation = -3.14159
scale = Vector2( 0.5, -0.5 )

[node name="Sillhouette3" parent="." instance=ExtResource( 11 )]
position = Vector2( 41.2605, 157.181 )

[node name="Sillhouette4" parent="." instance=ExtResource( 13 )]
position = Vector2( -34, 180 )

[node name="YardNormalForeground" type="Sprite" parent="."]
position = Vector2( 654.991, 175.982 )
scale = Vector2( 1.354, 1.354 )
texture = ExtResource( 16 )
hframes = 2

[node name="Crab" parent="." instance=ExtResource( 9 )]
position = Vector2( 200, 199 )
rotation = -3.14159
scale = Vector2( 1, -1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 459.707, 316 )
scale = Vector2( 1.33371, 1.33371 )
texture = ExtResource( 10 )

[node name="BarCounter" type="Sprite" parent="."]
position = Vector2( 459.54, 262.833 )
scale = Vector2( 1.34, 1 )
z_index = 2
texture = ExtResource( 2 )

[node name="SideCounter" type="Sprite" parent="."]
position = Vector2( 997.433, 262.833 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 35 )
offset = Vector2( 200, 0 )

[node name="SideCounter2" type="Sprite" parent="."]
position = Vector2( 97.8718, 262.833 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 35 )
offset = Vector2( 200, 0 )

[node name="CounterShelf" type="Sprite" parent="."]
position = Vector2( 839.101, 307.245 )
scale = Vector2( 1.2, 1.21 )
texture = ExtResource( 36 )

[node name="CounterShelf2" type="Sprite" parent="."]
position = Vector2( 57.1009, 307.245 )
scale = Vector2( 1.2, 1.21 )
texture = ExtResource( 36 )

[node name="ExtraDrinks" type="Node" parent="."]

[node name="Soup" type="Area2D" parent="ExtraDrinks"]
position = Vector2( 65.5993, 364.335 )

[node name="Sprite" type="Sprite" parent="ExtraDrinks/Soup"]
position = Vector2( 2.4865, -1.51364 )
scale = Vector2( 1.57602, 1.57602 )
texture = ExtResource( 38 )
hframes = 8
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExtraDrinks/Soup"]
position = Vector2( 0.627655, 1.57941 )
shape = SubResource( 2 )

[node name="Pickles" type="Area2D" parent="ExtraDrinks"]
position = Vector2( 21, 366 )
scale = Vector2( 1.4, 1.4 )

[node name="Sprite" type="Sprite" parent="ExtraDrinks/Pickles"]
texture = ExtResource( 38 )
hframes = 8
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExtraDrinks/Pickles"]
position = Vector2( 0, 4.99997 )
shape = SubResource( 3 )

[node name="Monster" type="Area2D" parent="ExtraDrinks"]
position = Vector2( 104, 267 )

[node name="Sprite" type="Sprite" parent="ExtraDrinks/Monster"]
texture = ExtResource( 38 )
hframes = 8
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExtraDrinks/Monster"]
position = Vector2( 0, -1.05546 )
shape = SubResource( 4 )

[node name="Milk" type="Area2D" parent="ExtraDrinks"]
position = Vector2( 24, 267 )

[node name="Sprite" type="Sprite" parent="ExtraDrinks/Milk"]
position = Vector2( -2.94803, -6.05197 )
scale = Vector2( 1.37825, 1.37825 )
texture = ExtResource( 38 )
hframes = 8
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExtraDrinks/Milk"]
position = Vector2( 0, -2.05546 )
shape = SubResource( 4 )

[node name="DrBob" type="Area2D" parent="ExtraDrinks"]
position = Vector2( 64, 267 )

[node name="Sprite" type="Sprite" parent="ExtraDrinks/DrBob"]
position = Vector2( 0.929138, -8.92914 )
scale = Vector2( 1.55807, 1.55807 )
texture = ExtResource( 38 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExtraDrinks/DrBob"]
position = Vector2( 0, -3.05546 )
shape = SubResource( 4 )

[node name="Vinegar" type="Area2D" parent="ExtraDrinks"]
position = Vector2( 16, 323 )

[node name="Sprite" type="Sprite" parent="ExtraDrinks/Vinegar"]
position = Vector2( 0.929138, -8.92914 )
scale = Vector2( 1.28524, 1.55807 )
texture = ExtResource( 38 )
hframes = 8
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExtraDrinks/Vinegar"]
position = Vector2( 0, -3.05546 )
shape = SubResource( 4 )

[node name="BoxWine" type="Area2D" parent="ExtraDrinks"]
position = Vector2( 114, 372 )

[node name="Sprite" type="Sprite" parent="ExtraDrinks/BoxWine"]
position = Vector2( 0.929138, -8.92914 )
scale = Vector2( 1.28524, 1.55807 )
texture = ExtResource( 38 )
hframes = 8
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExtraDrinks/BoxWine"]
position = Vector2( 0, -3.05546 )
shape = SubResource( 4 )

[node name="SnootBeer" type="Area2D" parent="ExtraDrinks"]
position = Vector2( 110, 323 )

[node name="Sprite" type="Sprite" parent="ExtraDrinks/SnootBeer"]
position = Vector2( -16.7307, -8.73071 )
scale = Vector2( 1.54567, 1.54567 )
texture = ExtResource( 38 )
hframes = 8
frame = 4

[node name="CollisionShape2" type="CollisionShape2D" parent="ExtraDrinks/SnootBeer"]
position = Vector2( -17.263, -3.80979 )
shape = SubResource( 4 )

[node name="DrBob" parent="." instance=ExtResource( 3 )]
position = Vector2( 308, 385 )
z_index = 2
script = ExtResource( 21 )

[node name="BarTapSprite" parent="DrBob" index="0"]
texture = ExtResource( 24 )

[node name="Bloodweiser" parent="." instance=ExtResource( 3 )]
position = Vector2( 263, 385.028 )
z_index = 2
script = ExtResource( 22 )

[node name="BarTapSprite" parent="Bloodweiser" index="0"]
texture = ExtResource( 34 )

[node name="Crudlite" parent="." instance=ExtResource( 3 )]
position = Vector2( 213, 385.028 )
z_index = 2
script = ExtResource( 19 )

[node name="BarTapSprite" parent="Crudlite" index="0"]
texture = ExtResource( 33 )

[node name="Snootbeer" parent="." instance=ExtResource( 3 )]
position = Vector2( 163, 385.028 )
z_index = 2
script = ExtResource( 20 )

[node name="Clock" parent="." instance=ExtResource( 5 )]
position = Vector2( 29, 17 )
scale = Vector2( 1.5, 1.5 )

[node name="ClockText" parent="Clock" index="1"]
margin_top = 2.4186
margin_bottom = 44.4186

[node name="StrikeList" parent="Clock" instance=ExtResource( 25 )]
position = Vector2( 544.595, -6.57847 )
scale = Vector2( -0.75, 0.75 )
z_index = 1

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 139, 30 )
stream = ExtResource( 4 )
autoplay = true

[node name="BGM2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 139, 30 )
stream = ExtResource( 6 )

[node name="Rglass" parent="." instance=ExtResource( 18 )]
position = Vector2( 818.771, 300.735 )
scale = Vector2( 2.5, 2.5 )
z_index = 2
script = ExtResource( 28 )

[node name="Sprite" type="Sprite" parent="Rglass"]
position = Vector2( 1.20007, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 23 )

[node name="Wglass" parent="." instance=ExtResource( 18 )]
position = Vector2( 822, 352 )
scale = Vector2( 2.5, 2.5 )
z_index = 2
script = ExtResource( 30 )

[node name="Sprite" type="Sprite" parent="Wglass"]
scale = Vector2( 2, 2 )
texture = ExtResource( 27 )

[node name="Soupbowls" parent="." instance=ExtResource( 18 )]
position = Vector2( 820.796, 243.748 )
scale = Vector2( 2.5, 2.5 )
z_index = 2
script = ExtResource( 29 )

[node name="Sprite" type="Sprite" parent="Soupbowls"]
position = Vector2( 8, 10.4 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 26 )

[node name="Sprite2" type="Sprite" parent="Soupbowls"]
position = Vector2( -6.80002, 10.4 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 26 )

[node name="Player" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0.478431 )
position = Vector2( 193, -12 )
z_index = 2

[node name="SeatSpawner2" parent="." instance=ExtResource( 17 )]
position = Vector2( 617, 383 )

[node name="Enemy" parent="SeatSpawner2" index="0"]
position = Vector2( 36.9999, -23 )

[node name="Door" parent="SeatSpawner2" index="3"]
position = Vector2( 42, -170 )

[node name="Seat" parent="SeatSpawner2" index="4"]
position = Vector2( -169, -21 )

[node name="SeatSpawner" parent="." instance=ExtResource( 17 )]
position = Vector2( 617, 383 )

[node name="Enemy" parent="SeatSpawner" index="0"]
position = Vector2( 36.9999, -23 )

[node name="Door" parent="SeatSpawner" index="3"]
position = Vector2( 42, -170 )

[node name="Seat" parent="SeatSpawner" index="4"]
position = Vector2( -14, -23 )

[node name="Bottomselect" type="Area2D" parent="."]
position = Vector2( 139, -7 )
z_index = 2
script = ExtResource( 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottomselect"]
position = Vector2( 140, 459 )
shape = SubResource( 1 )

[node name="DrinkSheet" type="Sprite" parent="Bottomselect"]
position = Vector2( 140, 460 )
z_index = 2
texture = ExtResource( 31 )

[node name="Black" type="Node2D" parent="."]
visible = false
position = Vector2( -60, -65 )
z_index = 10

[node name="Black" type="ColorRect" parent="Black"]
margin_right = 1090.0
margin_bottom = 587.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pulses" parent="." instance=ExtResource( 37 )]

[node name="TV" parent="." instance=ExtResource( 39 )]
position = Vector2( 92.9731, 142.736 )
scale = Vector2( 2, 2 )
[connection signal="DrBob" from="DrBob" to="Player" method="_on_DrBob_DrBob"]
[connection signal="Bloodweiser" from="Bloodweiser" to="Player" method="_on_Bloodweiser_Bloodweiser"]
[connection signal="Crudlite" from="Crudlite" to="Player" method="_on_Crudlite_Crudlite"]
[connection signal="Snootbeer" from="Snootbeer" to="Player" method="_on_Snootbeer_Snootbeer"]
[connection signal="scaryTime" from="Clock" to="." method="_on_Clock_scaryTime"]
[connection signal="finished" from="BGM" to="." method="_on_BGM_finished"]
[connection signal="GotRglass" from="Rglass" to="Player" method="_on_Rglass_GotRglass"]
[connection signal="GotWglass" from="Wglass" to="Player" method="_on_Wglass_GotWglass"]
[connection signal="GotSoupCont" from="Soupbowls" to="Player" method="_on_Soupbowls_GotSoupCont"]
[connection signal="BottomItemGrabbed" from="Bottomselect" to="Player" method="_on_Bottomselect_BottomItemGrabbed"]

[editable path="DrBob"]

[editable path="Bloodweiser"]

[editable path="Crudlite"]

[editable path="Clock"]

[editable path="SeatSpawner2"]

[editable path="SeatSpawner"]
